* 0.128

- Use default thread count for TestingHttpServerModule
- Support building prefixed configs in AbstractConfigurationAwareModule

* 0.127

- Remove all usage of ThreadGroup
- Make HTTP client response headers case insensitive
- Add HTTP/2 support in HTTP server for HTTP (not HTTPS)
- Add HTTP/2 support in HTTP client for HTTP (off by default)
- Add BoundedThreadPool

* 0.126

- Upgrade Jetty to 9.3.8.v20160314
- Upgrade Jersey to 2.22.2
- Add getQuantilesUpperBound() and getQuantilesLowerBound() to QuantileDigest

* 0.125

- Add JMX stats for HTTP response codes and failures
- Fix broken gzip handling in HTTP server
- Fix typo for keytab option in SpnegoAuthentication
- Fix thread leak in HTTP client when using anonymous pool

* 0.124

- Upgrade to jmxutils 1.19 which fixes issue with LoggingMBean

* 0.123

- Upgrade Jetty to 9.3.7.RC0
- Add ability for TestingHttpClient to send checked exceptions
- Use JDK Function for AsyncSemaphore

* 0.122

- Disable Jackson property mutator inference
- Add allAsList MoreFutures utility

* 0.121

- Fix configuration property to include and exclude HTTPS cipher suites

* 0.120

- Add configuration property to include and exclude HTTPS cipher suites

* 0.119

- Reduce contention during lifecycle tracking
- Add getMaxContentLength to HTTP client

* 0.118

- Improve messages for configuration errors
- Add JMX stat for days until HTTPS certificate expires

* 0.117

- Refresh Kerberos credentials for HTTP client before they expire

* 0.116

- Add configuration for HTTP selector and acceptor thread pools
- Fix config defaults bindings with annotation class
- Fix config defaults bindings for HTTP clients

* 0.115

- Add more MoreFutures utilities

* 0.114

- Make HttpServer logging more configurable
- Make configuration names for Logging and HttpServer logging match

* 0.113

- Change kerberos service principal format to correct serviceName@host
- Replace Guava Optional in TestingNodeModule and JettyHttpClient